# jslon

./: .gitignore  Cargo.toml  README.md  index.html
assets/: jslon.icns
bins/JSLON.app/Contents/: Info.plist
src/: main.rs
