[package]
name = "JSLON"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
memmap2 = "0.9.5"
rfd = "0.15.3"
serde_json = "1.0.140"
memchr = "2.7.4"
csv = "1.3.1"
env_logger = "0.11"


[package.metadata.bundle]
name = "JSLON"
identifier = "com.skirdey.JSLON"
icon = ["path/to/icon.png"]
version = "0.1.0"
copyright = "Copyright (c) 2025 Stanislav Kirdey"
category = "Developer Tool"
short_description = "Fast JSONL, CSV and TSV file viewer"