[package]
name = "JSLON"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
memmap2 = "0.9.5"
rfd = "0.15.3"
serde_json = "1.0.140"
memchr = "2.7.4"
csv = "1.3.1"
env_logger = "0.11"


[package.metadata.bundle]
name = "JSLON"
identifier = "com.skirdey.JSLON"
icon = ["assets/jslon.icns"]
resources = ["assets"]
version = "0.1.0"
copyright = "Copyright (c) 2025 Stanislav Kirdey"
category = "Developer Tool"
short_description = "Fast JSONL, CSV and TSV file viewer"


[package.metadata.bundle.mac]
name              = "JSLON"
identifier        = "com.skirdey.JSLON"
category          = "public.app‑category.developer‑tools"
version           = "0.1.0"

document_types = [
    { name = "JSON Lines File", extensions = ["jsonl","jl"], role = "Viewer", types = ["public.plain-text"] },
    { name = "Comma-Separated Values", extensions = ["csv"], role = "Viewer", types = ["public.comma-separated-values-text", "public.plain-text"] },
    { name = "Tab-Separated Values", extensions = ["tsv","tab"], role = "Viewer", types = ["public.tab-separated-values-text", "public.plain-text"] },
    { name = "Plain Text", extensions = ["txt","log"], role = "Viewer", types = ["public.plain-text"] },
]